fix splash page vendors spacing

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,3 +2,12 @@ body {
   background-image: url("https://s3-us-west-2.amazonaws.com/idea-box-rasensio/45degreee_fabric.png")
 }
 
+#my-nav {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+
+
+
+
